<resources>
    <string name="screen_zoom_summary_smaller">Smaller</string>
    <string name="screen_zoom_summary_smallest">Smallest</string>
    <string name="profile_applist_title">Apps</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="lockscreen_targets_message">Lock screen shortcuts</string>
    <string name="config_helpPackageNameKey" />
    <string name="config_helpPackageNameValue" />
    <string name="config_helpIntentExtraKey" />
    <string name="config_helpIntentNameKey" />
    <string name="config_feedbackIntentExtraKey" />
    <string name="config_feedbackIntentNameKey" />
    <string name="wifi_fail_to_scan">"Can't scan for networks"</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_none">None</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_security_passpoint">Passpoint</string>
    <string name="wifi_remembered">Saved</string>
    <string name="wifi_disabled_generic">Disabled</string>
    <string name="wifi_disabled_network_failure">IP Configuration Failure</string>
    <string name="wifi_disabled_wifi_failure">WiFi Connection Failure</string>
    <string name="wifi_disabled_password_failure">Authentication problem</string>
    <string name="wifi_not_in_range">Not in range</string>
    <string name="wifi_no_internet_no_reconnect">"No Internet Access Detected, won't automatically reconnect."</string>
    <string name="wifi_no_internet">No Internet Access.</string>
    <string name="saved_network">Saved by %1$s</string>
    <string name="connected_via_wfa">Connected via Wi‑Fi assistant</string>
    <string name="connected_via_passpoint">Connected via %1$s</string>
    <string name="available_via_passpoint">Available via %1$s</string>
    <string name="settings_package">com.android.flymexx</string>
    <string name="certinstaller_package">com.android.certinstaller</string>
    <string name="wifi_connected_no_internet">Connected, no Internet</string>
    <string name="wifi_auth_password_wrong">Password may be incorrect</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting…</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_pairing">Pairing…</string>
    <string name="bluetooth_connected_no_headset">Connected (no phone)</string>
    <string name="bluetooth_connected_no_a2dp">Connected (no media)</string>
    <string name="bluetooth_connected_no_map">Connected (no message access)</string>
    <string name="bluetooth_connected_no_headset_no_a2dp">Connected (no phone or media)</string>
    <string name="bluetooth_profile_a2dp">Media audio</string>
    <string name="bluetooth_profile_headset">Phone audio</string>
    <string name="bluetooth_profile_opp">File transfer</string>
    <string name="bluetooth_profile_hid">Input device</string>
    <string name="bluetooth_profile_pan">Internet access</string>
    <string name="bluetooth_profile_pbap">Contact sharing</string>
    <string name="bluetooth_profile_pbap_summary">Use for contact sharing</string>
    <string name="bluetooth_profile_pan_nap">Internet connection sharing</string>
    <string name="bluetooth_profile_map">Message Access</string>
    <string name="bluetooth_profile_sap">SIM Access</string>
    <string name="bluetooth_profile_dun">Dial-up Network Access</string>
    <string name="bluetooth_a2dp_profile_summary_connected">Connected to media audio</string>
    <string name="bluetooth_headset_profile_summary_connected">Connected to phone audio</string>
    <string name="bluetooth_opp_profile_summary_connected">Connected to file transfer server</string>
    <string name="bluetooth_map_profile_summary_connected">Connected to map</string>
    <string name="bluetooth_sap_profile_summary_connected">Connected to SAP</string>
    <string name="bluetooth_opp_profile_summary_not_connected">Not connected to file transfer server</string>
    <string name="bluetooth_hid_profile_summary_connected">Connected to input device</string>
    <string name="advanced">Advanced</string>
    <string name="privacy_settings_title">Privacy</string>
    <string name="privacy_guard_manager_summary">Manage which apps have access to your personal data</string>
    <string name="battery_light_title">Battery light</string>
    <string name="battery_low_pulse_title">Pulse if battery low</string>
    <string name="battery_light_list_title">Colors</string>
    <string name="battery_light_low_color_title">Battery low</string>
    <string name="battery_light_medium_color_title">Charging</string>
    <string name="battery_light_full_color_title">Fully charged</string>
    <string name="notification_light_title">Notification light</string>
    <string name="notification_light_general_title">General</string>
    <string name="notification_light_applist_title">Apps</string>
    <string name="notification_light_phonelist_title">Phone</string>
    <string name="notification_light_use_custom">Use custom values</string>
    <string name="notification_light_default_value">Default</string>
    <string name="notification_light_missed_call_title">Missed call</string>
    <string name="notification_light_voicemail_title">Voicemail</string>
    <string name="notification_light_brightness">@string/brightness</string>
    <string name="notification_light_screen_on">Lights with screen on</string>
    <string name="notification_light_zen_mode">Lights in Do Not Disturb mode</string>
    <string name="notification_light_use_multiple_leds">Multiple LEDs</string>
    <string name="notification_light_automagic">Choose colors automatically</string>
    <string name="live_display_summary">Optimize your screen based on time of day and ambient conditions to improve readability and reduce eyestrain</string>
    <string name="button_pref_title">Buttons</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_reboot_title">Restart menu</string>
    <string name="power_menu_screenshot_title">Screenshot</string>
    <string name="power_menu_airplane_title">Airplane mode</string>
    <string name="power_menu_users_title">User switcher</string>
    <string name="power_menu_bug_report_title">Bug report</string>
    <string name="power_menu_sound_title">Sound panel</string>
    <string name="profiles_settings_title">System profiles</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
    <string name="status_bar_icons_title">Status bar icons</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="status_bar_system_icons_title">System icons</string>
    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
    <string name="status_bar_clock_title">Clock</string>
    <string name="status_bar_clock_position_title">Clock position</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_battery_title">Battery indicator</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_brightness_category">Brightness</string>
    <string name="status_bar_brightness_slider_title">Brightness slider</string>
    <string name="status_bar_brightness_slider_summary">Adjust brightness from the Quick Settings</string>
    <string name="status_bar_brightness_slider_auto_title">Auto brightness</string>
    <string name="status_bar_brightness_slider_auto_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="protected_apps_manager_title">Protected apps</string>
    <string name="protected_apps_manager_summary">Manage which apps are hidden behind a secure lock</string>
    <string name="contributors_cloud_fragment_title">Contributors</string>
    <string name="contributors_cloud_loading_message">Loading contributors data…</string>
    <string name="contributors_cloud_failed_message">Cannot load contributors data</string>
    <string name="anonymous_statistics_title">LineageOS statistics</string>
    <string name="anonymous_statistics_summary">Help make LineageOS better by opting into anonymous statistics reporting</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="display_rotation_title">Rotation settings</string>
    <string name="display_lockscreen_rotation_title">Rotate lock screen</string>
    <string name="display_rotation_category_title">Rotation modes</string>
    <string name="display_rotation_0_title">0 degrees</string>
    <string name="display_rotation_90_title">90 degrees</string>
    <string name="display_rotation_180_title">180 degrees</string>
    <string name="display_rotation_270_title">270 degrees</string>
    <string name="weather_settings_title">Weather</string>
    <string name="perf_profile_settings_title">Battery saver and performance</string>
    <string name="perf_profile_settings_summary">Adjust power saving features and device performance</string>
    <string name="perf_profile_category_title">Device performance</string>
    <string name="perf_profile_title">Performance profile: %1$s</string>
    <string name="power_save_category_title">Battery saving</string>
    <string name="power_save_title">Extreme power saver</string>
    <string name="power_save_summary">Restrict device performance and background activity to save power</string>
    <string name="auto_power_save_title">Automatic power saver</string>
    <string name="app_perf_profiles_title">Automatic optimization</string>
    <string name="app_perf_profiles_summary">Automatically choose an appropriate performance profile for applications and usage patterns</string>
    <string name="expanded_desktop_settings_title">Expanded desktop</string>
    <string name="expanded_desktop_settings_summary">Expand your available desktop space by hiding the status bar, navigation bar, or both</string>
    <string name="charging_sounds_settings_title">Charging sounds</string>
    <string name="charging_sounds_enabled_title">Enable</string>
    <string name="charging_sounds_enabled_summary">Play a sound when connecting or disconnecting a power source</string>
    <string name="power_notifications_vibrate_title">Vibrate</string>
    <string name="charging_sounds_ringtone_title">Notification sound</string>
    <string name="touchscreen_gesture_settings_title">Touchscreen gestures</string>
    <string name="touchscreen_gesture_settings_summary">Perform various touchscreen gestures for quick actions</string>
</resources>