<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/status_bar_title" android:key="status_bar_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:lineage="http://schemas.android.com/apk/res/cyanogenmod.platform">
    <cyanogenmod.preference.CMSystemSettingListPreference android:entries="@array/status_bar_quick_qs_pulldown_entries" android:title="@string/status_bar_quick_qs_pulldown_title" android:key="qs_quick_pulldown" android:defaultValue="0" android:entryValues="@array/status_bar_quick_qs_pulldown_values" />
    <PreferenceCategory android:title="@string/status_bar_icons_title">
        <cyanogenmod.preference.CMSystemSettingSwitchPreference android:title="@string/status_bar_notif_count_title" android:key="status_bar_notif_count" android:summary="@string/status_bar_notif_count_summary" android:defaultValue="true" />
        <PreferenceScreen android:title="@string/status_bar_system_icons_title" android:key="status_bar_icons" android:summary="@string/status_bar_system_icons_summary">
            <intent android:action="com.android.flymexx.action.STATUS_BAR_TUNER" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/status_bar_clock_title">
        <cyanogenmod.preference.CMSystemSettingListPreference android:entries="@array/status_bar_clock_position_entries" android:title="@string/status_bar_clock_position_title" android:key="status_bar_clock" android:summary="%s" android:defaultValue="0" android:dialogTitle="@string/status_bar_clock_position_title" android:entryValues="@array/status_bar_clock_position_values" />
        <cyanogenmod.preference.CMSystemSettingListPreference android:entries="@array/status_bar_am_pm_entries" android:title="@string/status_bar_am_pm_title" android:key="status_bar_am_pm" android:summary="%s" android:defaultValue="2" android:dialogTitle="@string/status_bar_am_pm_title" android:entryValues="@array/status_bar_am_pm_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/status_bar_battery_title">
        <cyanogenmod.preference.CMSystemSettingListPreference android:entries="@array/status_bar_battery_style_entries" android:title="@string/status_bar_battery_style_title" android:key="status_bar_battery_style" android:summary="%s" android:defaultValue="2" android:dialogTitle="@string/status_bar_battery_style_title" android:entryValues="@array/status_bar_battery_style_values" />
        <cyanogenmod.preference.CMSystemSettingListPreference android:entries="@array/status_bar_battery_percentage_entries" android:title="@string/status_bar_battery_percentage_title" android:key="status_bar_show_battery_percent" android:summary="%s" android:defaultValue="0" android:dialogTitle="@string/status_bar_battery_percentage_title" android:entryValues="@array/status_bar_battery_percentage_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/status_bar_brightness_category">
        <cyanogenmod.preference.CMSecureSettingSwitchPreference android:title="@string/status_bar_brightness_slider_title" android:key="qs_show_brightness_slider" android:summary="@string/status_bar_brightness_slider_summary" android:defaultValue="true" />
        <cyanogenmod.preference.CMSecureSettingSwitchPreference android:title="@string/status_bar_brightness_slider_auto_title" android:key="qs_show_auto_brightness" android:summary="@string/status_bar_brightness_slider_auto_summary" android:dependency="qs_show_brightness_slider" android:defaultValue="true" lineage:requiresConfig="@android:bool/config_automatic_brightness_available" />
        <cyanogenmod.preference.CMSystemSettingSwitchPreference android:title="@string/status_bar_toggle_brightness" android:key="status_bar_brightness_control" android:summary="@string/status_bar_toggle_brightness_summary" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>