<?xml version="1.0" encoding="utf-8"?>
<parts-catalog
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:cm="http://schemas.android.com/apk/res/cyanogenmod.platform">
    <part android:title="@string/battery_light_title" android:key="battery_lights" android:fragment="org.cyanogenmod.cmparts.notificationlight.BatteryLightSettings" cm:xmlRes="@xml/battery_light_settings" />
    <part android:title="@string/button_pref_title" android:key="button_settings" android:fragment="org.cyanogenmod.cmparts.input.ButtonSettings" cm:xmlRes="@xml/button_settings" />
    <part android:title="@string/contributors_cloud_fragment_title" android:key="contributors" android:fragment="org.cyanogenmod.cmparts.contributors.ContributorsCloudFragment" />
    <part android:title="@cyanogenmod.platform:string/live_display_title" android:key="livedisplay" android:summary="@string/live_display_summary" android:fragment="org.cyanogenmod.cmparts.livedisplay.LiveDisplay" cm:xmlRes="@xml/livedisplay" />
    <part android:title="@string/notification_light_title" android:key="notification_lights" android:fragment="org.cyanogenmod.cmparts.notificationlight.NotificationLightSettings" cm:xmlRes="@xml/notification_light_settings" />
    <part android:title="@string/privacy_settings_title" android:key="privacy_settings" android:fragment="org.cyanogenmod.cmparts.PrivacySettings" cm:xmlRes="@xml/privacy_settings" />
    <part android:title="@string/profiles_settings_title" android:key="profiles_settings" android:fragment="org.cyanogenmod.cmparts.profiles.ProfilesSettings" cm:xmlRes="@xml/profiles_settings" />
    <part android:title="@string/display_rotation_title" android:key="rotation" android:fragment="org.cyanogenmod.cmparts.hardware.DisplayRotation" cm:xmlRes="@xml/display_rotation" />
    <part android:title="@string/status_bar_title" android:key="status_bar_settings" android:fragment="org.cyanogenmod.cmparts.statusbar.StatusBarSettings" cm:xmlRes="@xml/status_bar_settings" />
    <part android:title="@string/anonymous_statistics_title" android:key="cmstats" android:fragment="org.cyanogenmod.cmparts.cmstats.AnonymousStats" cm:xmlRes="@xml/anonymous_stats" />
    <part android:title="@string/power_menu_title" android:key="power_menu" android:fragment="org.cyanogenmod.cmparts.input.PowerMenuActions" cm:xmlRes="@xml/power_menu_settings" />
    <part android:title="@cyanogenmod.platform:string/privacy_guard_manager_title" android:key="privacy_guard_manager" android:fragment="org.cyanogenmod.cmparts.privacyguard.PrivacyGuardManager" cm:xmlRes="@xml/privacy_guard_prefs" />
    <part android:title="@string/weather_settings_title" android:key="weather_settings" android:fragment="org.cyanogenmod.cmparts.weather.WeatherServiceSettings" cm:xmlRes="@xml/weather_settings" />
    <part android:title="@string/perf_profile_settings_title" android:key="perf_profile_settings" android:summary="@string/perf_profile_settings_summary" android:fragment="org.cyanogenmod.cmparts.power.PerfProfileSettings" cm:xmlRes="@xml/perf_profile_settings" />
    <part android:title="@string/expanded_desktop_settings_title" android:key="expanded_desktop_settings" android:summary="@string/expanded_desktop_settings_summary" android:fragment="org.cyanogenmod.cmparts.applications.ExpandedDesktopSettings" cm:xmlRes="@xml/expanded_desktop_prefs" />
    <part android:title="@string/charging_sounds_settings_title" android:key="charging_sounds_settings" android:fragment="org.cyanogenmod.cmparts.sounds.ChargingSoundsSettings" cm:xmlRes="@xml/charging_sounds_settings" />
    <part android:title="@string/touchscreen_gesture_settings_title" android:key="touchscreen_gesture_settings" android:summary="@string/touchscreen_gesture_settings_summary" android:fragment="org.cyanogenmod.cmparts.gestures.TouchscreenGestureSettings" cm:xmlRes="@xml/touchscreen_gesture_settings" />
</parts-catalog>