<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/power_menu_title" android:key="power_menu"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/power_menu_reboot_title" android:key="restart" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/power_menu_screenshot_title" android:key="screenshot" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/power_menu_airplane_title" android:key="airplane" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/power_menu_users_title" android:key="users" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/power_menu_bug_report_title" android:key="bugreport" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/power_menu_sound_title" android:key="silent" android:defaultValue="false" />
</PreferenceScreen>