<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/privacy_settings_title" android:key="privacy_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@cyanogenmod.platform:string/privacy_guard_manager_title" android:key="privacy_guard_manager" android:summary="@string/privacy_guard_manager_summary" android:fragment="org.cyanogenmod.cmparts.privacyguard.PrivacyGuardManager" />
    <Preference android:title="@string/protected_apps_manager_title" android:summary="@string/protected_apps_manager_summary">
        <intent android:targetPackage="com.android.flymexx" android:action="android.intent.action.VIEW" android:targetClass="com.android.flymexx.applications.ProtectedAppsActivity" />
    </Preference>
    <PreferenceScreen android:title="@string/anonymous_statistics_title" android:key="cmstats" android:summary="@string/anonymous_statistics_summary" android:fragment="org.cyanogenmod.cmparts.cmstats.AnonymousStats" />
</PreferenceScreen>