<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/battery_light_title" android:key="battery_lights"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/notification_light_general_title" android:key="general_section">
        <cyanogenmod.preference.CMSystemSettingSwitchPreference android:title="@string/battery_light_title" android:key="battery_light_enabled" android:defaultValue="@bool/def_battery_light_enabled" />
        <cyanogenmod.preference.CMSystemSettingSwitchPreference android:title="@string/battery_low_pulse_title" android:key="battery_light_pulse" android:dependency="battery_light_enabled" android:defaultValue="@bool/def_battery_light_pulse" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/battery_light_list_title" android:key="colors_list" android:dependency="battery_light_enabled">
        <org.cyanogenmod.cmparts.notificationlight.ApplicationLightPreference android:persistent="false" android:title="@string/battery_light_low_color_title" android:key="low_color" />
        <org.cyanogenmod.cmparts.notificationlight.ApplicationLightPreference android:persistent="false" android:title="@string/battery_light_medium_color_title" android:key="medium_color" />
        <org.cyanogenmod.cmparts.notificationlight.ApplicationLightPreference android:persistent="false" android:title="@string/battery_light_full_color_title" android:key="full_color" />
    </PreferenceCategory>
</PreferenceScreen>