<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/charging_sounds_settings_title" android:key="charging_sounds_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <cyanogenmod.preference.GlobalSettingSwitchPreference android:title="@string/charging_sounds_enabled_title" android:key="charging_sounds_enabled" android:summary="@string/charging_sounds_enabled_summary" />
    <cyanogenmod.preference.CMGlobalSettingSwitchPreference android:title="@string/power_notifications_vibrate_title" android:key="power_notifications_vibrate" android:dependency="charging_sounds_enabled" />
    <Preference android:persistent="false" android:title="@string/charging_sounds_ringtone_title" android:key="charging_sounds_ringtone" android:dependency="charging_sounds_enabled" />
</PreferenceScreen>