<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/contributors_cloud_image" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/contributors_cloud_fragment_title" />
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/contributors_cloud_loading" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ProgressBar android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminateOnly="true" />
        <TextView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/contributors_cloud_loading_message" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/contributors_cloud_failed" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="64.0dip" android:layout_height="64.0dip" android:src="@drawable/ic_warning" android:contentDescription="@string/contributors_cloud_failed_message" />
        <TextView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/contributors_cloud_failed_message" />
    </LinearLayout>
    <ListView android:id="@id/contributors_cloud_search_results" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</FrameLayout>